# ezlyric

./: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc  resource.rc  sizehintwidget.cpp  sizehintwidget.h  song.cpp  song.h  songeditor.cpp  songeditor.h
